Mobile Alignment of footer fix

--- a/lightbox/css/client-style.css
+++ b/lightbox/css/client-style.css
@@ -175,7 +175,7 @@ div.xly.xly-popup > div.xly.xly-container > div.xly.xly-row .xly-content .xly-bo
     }
 
     div.xly.xly-popup > div.xly.xly-container > div.xly.xly-row .xly-footer .xly-item .xly-actions {
-    left: -15%;
+    left: -20%;
     position: relative;
     }
 
